--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>My Library Landing Page</title>
+	<title>	ARCHIVE KEEP</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="style.css">
 </head>
@@ -55,11 +55,11 @@
 			<h2>What Our Members Say</h2>
 			<div class="testimonial">
 				<blockquote>"I love My Library! The staff are friendly and helpful, and the collection is amazing."</blockquote>
-				<cite>John Doe, Member since 2020</cite>
+				<cite>Ndanu Ann, Member since 2020</cite>
 			</div>
 			<div class="testimonial">
 				<blockquote>"My Library has been a great resource for me. I've discovered so many new authors and books thanks to them."</blockquote>
-				<cite>Jane Smith, Member since 2019</cite>
+				<cite>Gikonye Doris, Member since 2019</cite>
 			</div>
 		</section>
 		<section id="contact">
